完成写入rfid的接口

--- a/src/main/resources/templates/rfid/rfid_read.html
+++ b/src/main/resources/templates/rfid/rfid_read.html
@@ -16,7 +16,7 @@
         <section class="content container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-primary btn-sm" action="/rfid/read">保存</button>
+                    <button type="submit" class="btn btn-primary btn-sm" action="/rfid/read">读取标签</button>
                 </div>
             </div>
         </section>
