完善了一下前端，打通了读取的流程

--- a/src/main/resources/templates/module/_footer.html
+++ b/src/main/resources/templates/module/_footer.html
@@ -1,6 +1,6 @@
 <footer class="main-footer">
     <div class="pull-right hidden-xs"><a href="#">2020</a></div>
-    Thanks for using <strong><a data-pjax="true" href="#">Rule Engine</a>.</strong>
+    Thanks for using <strong><a data-pjax="true" href="#">RFID Management System</a>.</strong>
 </footer>
 
 <script src="/static/plugins/pjax/jquery.pjax.js"></script>
