--- a/src/main/resources/templates/module/_header.html
+++ b/src/main/resources/templates/module/_header.html
@@ -25,8 +25,8 @@
 <body class="hold-transition sidebar-mini fixed skin-blue">
 <header class="main-header">
     <a href="/admin" class="logo">
-        <span class="logo-mini"><b>R</b>E</span>
-        <span class="logo-lg">Rule Engine</span>
+        <span class="logo-mini"><b>R</b>M</span>
+        <span class="logo-lg">RFID Management</span>
     </a>
     <nav class="navbar navbar-static-top" role="navigation">
         <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
