--- a/src/main/resources/templates/module/_sidebar.html
+++ b/src/main/resources/templates/module/_sidebar.html
@@ -23,27 +23,21 @@
         </form>
 
         <ul class="sidebar-menu" data-widget="tree">
-            <li class="treeview"><a data-pjax="true" href="/rule"> <span>规则管理</span>
+            <li class="treeview"><a data-pjax="true" href="/rule"> <span>读取</span>
                 <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span> </a>
                 <ul class="treeview-menu">
                     <li><a data-pjax="true" href="/rule">所有规则 </a></li>
                     <li><a data-pjax="true" href="/rule/add">添加规则</a></li>
                 </ul>
             </li>
-            <li class="treeview"><a data-pjax="true" href="/method"><span>取数方法管理</span>
+            <li class="treeview"><a data-pjax="true" href="/method"><span>写入</span>
                 <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span> </a>
                 <ul class="treeview-menu">
                     <li><a data-pjax="true" href="/method">所有取数方法 </a></li>
                     <li><a data-pjax="true" href="/method/add">添加取数</a></li>
                 </ul>
             </li>
-            <li class="treeview"><a data-pjax="true" href="/user"><span>用户管理</span>
-                <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span> </a>
-                <ul class="treeview-menu">
-                    <li><a data-pjax="true" href="/user">所有用户 </a></li>
-                    <li><a data-pjax="true" href="/user/add">添加用户</a></li>
-                </ul>
-            </li>
+
         </ul>
     </section>
 </aside>
