完成inventory和新建标签的功能

--- a/src/main/resources/templates/module/_sidebar.html
+++ b/src/main/resources/templates/module/_sidebar.html
@@ -23,7 +23,7 @@
         </form>
 
         <ul class="sidebar-menu" data-widget="tree">
-            <li><a data-pjax="true" href="/inventory"><span>新建标签</span></a>
+            <li><a data-pjax="true" href="/label/add"><span>新建标签</span></a>
             </li>
             <li class="treeview"><a data-pjax="true" href="/outbound"> <span>出库管理</span>
                 <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span> </a>
