--- a/src/main/resources/templates/module/_sidebar.html
+++ b/src/main/resources/templates/module/_sidebar.html
@@ -23,8 +23,16 @@
         </form>
 
         <ul class="sidebar-menu" data-widget="tree">
-            <li><a data-pjax="true" href="/label/add"><span>新建标签</span></a>
+            <li class="treeview"><a data-pjax="true" href="/label"> <span>标签管理</span>
+                <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span> </a>
+                <ul class="treeview-menu">
+                    <li><a data-pjax="true" href="/label/add">新建标签 </a></li>
+                    <li><a data-pjax="true" href="/label/empty">格式化标签</a></li>
+                    <li><a data-pjax="true" href="/label">标签列表</a></li>
+                </ul>
             </li>
+
+
             <li class="treeview"><a data-pjax="true" href="/outbound"> <span>出库管理</span>
                 <span class="pull-right-container"><i class="fa fa-angle-left pull-right"></i></span> </a>
                 <ul class="treeview-menu">
