--- a/src/main/resources/templates/newlabel/label_empty.html
+++ b/src/main/resources/templates/newlabel/label_empty.html
@@ -9,7 +9,7 @@
         </style>
         <section class="content-header">
             <h1>
-                新建标签
+                格式化标签
             </h1>
             <ol class="breadcrumb">
                 <li>
@@ -17,14 +17,15 @@
                         <i class="fa fa-dashboard"></i> 首页</a>
                 </li>
                 <li><a data-pjax="true" href="#">标签管理</a></li>
-                <li class="active">新建标签</li>
+                <li class="active">格式化标签</li>
             </ol>
         </section>
         <!-- tab选项卡 -->
         <section class="content container-fluid">
             <div class="row">
+
                 <div class="col-md-12">
-                    <form method="post" class="form-horizontal" action="/labelPost">
+                    <form method="post" class="form-horizontal" action="/label/emptyLabel">
                         <div class="box box-primary">
                             <div class="box-body">
 
@@ -35,23 +36,18 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group">
-                                    <label class="col-lg-2 col-sm-4 control-label">化学品id</label>
-                                    <div class="col-lg-4 col-sm-8">
-                                        <input type="text" class="form-control" name="chemical_id">
-                                    </div>
-                                </div>
 
                             </div>
-
                             <div class="box-footer">
-                                <button type="submit" class="btn btn-primary btn-sm">保存</button>
-                                <a href="/method" class="btn btn-info btn-sm">返回</a>
+                                <button type="submit" class="btn btn-primary btn-sm">确定</button>
+                                <a href="/rule" class="btn btn-info btn-sm">返回</a>
                             </div>
-
                         </div>
                     </form>
                 </div>
+
+
+
             </div>
         </section>
 
