--- a/src/main/resources/templates/newlabel/label_list.html
+++ b/src/main/resources/templates/newlabel/label_list.html
@@ -12,25 +12,19 @@
             }
         </style>
         <section class="content-header">
-            <h1 style="display: inline-block;">入库管理</h1>
+            <h1 style="display: inline-block;">标签管理</h1>
             <ol class="breadcrumb">
                 <li>
                     <a data-pjax="true" href="/">
                         <i class="fa fa-dashboard"></i> 首页</a>
                 </li>
-                <li><a data-pjax="true" href="/inbound">入库管理</a></li>
-                <li class="active">入库记录</li>
+                <li><a data-pjax="true" href="/label">标签管理</a></li>
+                <li class="active">标签列表</li>
             </ol>
         </section>
         <section class="content container-fluid">
             <div class="row">
-                <div class="col-xs-12">
-                    <div class="col-md-4 col-xs-12" style="margin-bottom: 10px;padding-left: 0;">
-                        <a class="btn btn-primary" href="/inbound/add">
-                            <i class="fa fa-plus"></i> 新增
-                        </a>
-                    </div>
-                </div>
+
                 <div class="col-xs-12">
                     <div class="box box-primary">
                         <div class="box-body table-responsive">
@@ -38,20 +32,15 @@
                                 <thead>
                                 <tr>
                                     <th>标签id</th>
-                                    <th>仓库uuid</th>
-                                    <th>货架号</th>
-                                    <th>货架位置</th>
-                                    <th>入库时间</th>
+                                    <th>是否使用</th>
+                                    <th>表示的化学品id</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr th:each="item : ${pageInfo.list}">
                                     <td>[[${item.label_id}]]</td>
-                                    <td>[[${item.warehouse_uuid}]]</td>
-                                    <td>[[${item.shelf_no}]]</td>
-                                    <td>[[${item.shelf_position_n}]]</td>
-                                    <td>[[${item.create_time}]]</td>
-
+                                    <td>[[${item.is_used}]]</td>
+                                    <td>[[${item.chemical_id}]]</td>
                                 </tr>
                                 </tbody>
                             </table>
